<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="BaudRate">BaudRate:</string>
    <string name="CardCount">Times  </string>
    <string name="CardNum">Number  </string>
    <string name="CardSpeed">Speed  </string>
    <string name="Connect">Connect</string>
    <string name="IvtType">Read Mode:</string>
    <string name="Optfailed">Operation failed</string>
    <string name="Optsuccess">Operation successed</string>
    <string name="ReadTime">Time(sec):</string>
    <string name="ReadType">Mix-Read Mem:</string>
    <string name="RunTime">run time(Sec):</string>
    <string name="SerialPort">SerialPort:</string>
    <string name="StrLED">LED ON</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="ant1">ANT1</string>
    <string name="ant2">ANT2</string>
    <string name="ant3">ANT3</string>
    <string name="ant4">ANT4</string>
    <string name="ant5">ANT5</string>
    <string name="ant6">ANT6</string>
    <string name="ant7">ANT7</string>
    <string name="ant8">ANT8</string>
    <string name="antenna_error">Antenna set failed</string>
    <string name="app_name">UHFDemoDemo_V3.78</string>
    <string name="band">Band:</string>
    <string name="bankid">Bank:</string>
    <string name="basicparam">Basic Parameter</string>
    <string name="beep_error">Beep set failed</string>
    <string name="beepstr">Beep:</string>
    <string name="btClear">Clear</string>
    <string name="btImport">Export</string>
    <string name="btInventory">Start</string>
    <string name="btKill">Kill</string>
    <string name="btStoping">Stoping</string>
    <string name="bt_fst_select">Select Txt</string>
    <string name="bt_fst_show">Image Show</string>
    <string name="bt_fst_tran">Image Tran</string>
    <string name="btlock">Lock</string>
    <string name="btn_active">Active Mode</string>
    <string name="btn_answer">Answer Mode</string>
    <string name="btn_closerf">Close RF</string>
    <string name="btn_getstr">Get</string>
    <string name="btn_openrf">Open RF</string>
    <string name="btn_setstr">Set</string>
    <string name="btscan">Scan</string>
    <string name="btstop">Stop</string>
    <string name="butnread">Read</string>
    <string name="butnwrite">Write</string>
    <string name="butnwriteepc">WriteEPC</string>
    <string name="content_empty_warning">Write data need content not be empty!</string>
    <string name="data_ilegal">Data illegal!(empty or length is odd?)</string>
    <string name="dmax">MaxFre:</string>
    <string name="dmin">MinFre:</string>
    <string name="dwelltime">DwellTime:</string>
    <string name="epcid">ID:</string>
    <string name="error_content_empty">Write data need content not be empty!</string>
    <string name="error_length_content">Length and content does not match!</string>
    <string name="error_length_empty">Length can not be empty!</string>
    <string name="error_open_warning">You must open the device before your oprate!</string>
    <string name="error_pwd_empty">Password can not be empty!</string>
    <string name="error_str_lenght_odd">Length of every data can not be odd!</string>
    <string name="error_wordptr_empty">WordPtr can not be empty!</string>
    <string name="finding">Find</string>
    <string name="frequent_error">Frequency set failed</string>
    <string name="get_failed">Read Failed</string>
    <string name="get_success">Read Success</string>
    <string name="getstr">Get</string>
    <string name="hello_world">Hello world!</string>
    <string name="idno">ID</string>
    <string name="info_result">Result:</string>
    <string name="info_select_tid">Tag ID must be TID!</string>
    <string name="kill_failed">Kill Failed</string>
    <string name="kill_success">Kill Success</string>
    <string name="length_content_warning">Length and content does not match!</string>
    <string name="length_empty_warning">Length can not be empty!</string>
    <string name="lock_failed">Lock Failed</string>
    <string name="lock_success">Lock Success</string>
    <string name="lowpower">Low Power Mode:</string>
    <string name="memlen">Len:</string>
    <string name="memptr">Ptr:</string>
    <string name="menu_settings">Settings</string>
    <string name="msgImportfailed">Export failed</string>
    <string name="msgImportsuc">Export success</string>
    <string name="msgNodata">No data to export</string>
    <string name="noteStr">Lock or kill password can not be 00000000</string>
    <string name="number">Number:</string>
    <string name="open_warning">You must open the device before your oprate!</string>
    <string name="openport_failed">Connect Failed</string>
    <string name="openport_success">Connect Success</string>
    <string name="power">Power:</string>
    <string name="power_error">Power set failed</string>
    <string name="pwd_empty_warning">Password can not be empty!</string>
    <string name="pwdstr">Access Pwd:</string>
    <string name="qvalue">Q:</string>
    <string name="rbInventoryLoop">Auto</string>
    <string name="rbInventorySingle">Single</string>
    <string name="readstr">ReadData:</string>
    <string name="rssi">RSSI</string>
    <string name="scanparam">Inventory Parameter</string>
    <string name="scantime">MaxScanTime:</string>
    <string name="search_menu_title">Search</string>
    <string name="session">Session:</string>
    <string name="set_failed">Set Failed</string>
    <string name="set_success">Set Success</string>
    <string name="setstr">Set</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="str_lenght_odd_warning">Length of every data can not be odd!</string>
    <string name="strantchcek">AntennaCheck:</string>
    <string name="strcancle">Cancle</string>
    <string name="strfactory">Factory:</string>
    <string name="strfailed">Failed!!!</string>
    <string name="strfilter">Filter</string>
    <string name="strfindtag">Finding</string>
    <string name="strmask">Mask</string>
    <string name="strmaskadd">Add</string>
    <string name="strmaskaddr">MaskAddr:</string>
    <string name="strmaskclear">Clear</string>
    <string name="strmaskdata">MaskData:</string>
    <string name="strmasklen">MaskLen:</string>
    <string name="strmaskmem">MaskMem:</string>
    <string name="strok">OK</string>
    <string name="strreadandwrite">Read/write</string>
    <string name="strselectepc">Select EPC:</string>
    <string name="strselecttag">Select tag</string>
    <string name="strsuccess">Success!!!</string>
    <string name="strtagoperate">Tag Operation</string>
    <string name="tab_assign">Assign</string>
    <string name="tab_fst">E-Paper</string>
    <string name="tab_mask">Mask</string>
    <string name="tab_param">Param</string>
    <string name="tab_rw">R/W</string>
    <string name="tab_scan">Scan</string>
    <string name="tidlen">Length:</string>
    <string name="tidptr">WordPtr:</string>
    <string name="timeInterval">Interval:</string>
    <string name="times">Times</string>
    <string name="title_activity_connect232">Connect232</string>
    <string name="title_stop_Inventory">Stop</string>
    <string name="title_stoping_Inventory">Stoping</string>
    <string name="ttime">Time(ms):</string>
    <string name="tvCountOfTags">Total  </string>
    <string name="tvKillPwd">Kill Pwd：</string>
    <string name="tvLockMem">Lock Mem：</string>
    <string name="tvLockType">Lock Type：</string>
    <string name="tvTagCount">Count</string>
    <string name="tvTagLen">Length</string>
    <string name="tvTagUii">EPC</string>
    <string name="txt_range_controll">Range Control Index：</string>
    <string name="txt_read">Read</string>
    <string name="txt_returnloss">Return Loss:</string>
    <string name="txt_temp">Temperature</string>
    <string name="txtepc">ID:</string>
    <string name="uhf_title_lock">Lock</string>
    <string name="uhf_title_lockforever">Permanent Lock</string>
    <string name="uhf_title_open">Open</string>
    <string name="uhf_title_openforever">Permanent Open</string>
    <string name="version">Version:</string>
    <string name="wordptr_empty_warning">WordPtr can not be empty!</string>
    <string name="write_failed">Write Failed</string>
    <string name="write_success">Write Success</string>
    <string name="writestr">WriteData:</string>
</resources>
