<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/scrollView1" android:layout_width="match_parent" android:layout_height="match_parent" android:keepScreenOn="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:gravity="right" android:layout_gravity="center" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/info_result" android:layout_weight="1.0" />
            <TextView android:textSize="20.0dp" android:textColor="#cc0000" android:gravity="center" android:layout_gravity="center" android:id="@id/rw_result" android:layout_width="0.0dp" android:layout_height="@dimen/rm_6c_et_height" android:layout_weight="2.0" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:gravity="right" android:layout_gravity="center" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/txtepc" android:layout_weight="1.0" />
            <TextView android:gravity="left" android:layout_gravity="center" android:id="@id/epc_text" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/txtepc" android:layout_weight="2.0" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:gravity="right" android:layout_gravity="center" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/pwdstr" android:layout_weight="1.0" />
            <EditText android:gravity="left" android:id="@id/et_pwd" android:layout_width="0.0dp" android:layout_height="@dimen/rm_6c_et_height" android:hint="00000000" android:layout_weight="2.0" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:gravity="right" android:layout_gravity="center" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/bankid" android:layout_weight="1.0" />
            <Spinner android:gravity="left" android:id="@id/mem_spinner" android:layout_width="0.0dp" android:layout_height="@dimen/rm_6c_et_height" android:layout_weight="2.0" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:gravity="right" android:layout_gravity="center" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/memptr" android:layout_weight="1.0" />
            <EditText android:gravity="left" android:id="@id/et_wordptr" android:layout_width="0.0dp" android:layout_height="@dimen/rm_6c_et_height" android:text="0" android:layout_weight="2.0" android:inputType="numberSigned" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:gravity="right" android:layout_gravity="center" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/memlen" android:layout_weight="1.0" />
            <EditText android:gravity="left" android:id="@id/et_length" android:layout_width="0.0dp" android:layout_height="@dimen/rm_6c_et_height" android:text="6" android:layout_weight="2.0" android:inputType="numberSigned" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:gravity="right" android:layout_gravity="center" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/writestr" android:layout_weight="1.0" />
            <EditText android:gravity="left" android:id="@id/et_content_6c" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="" android:layout_weight="2.0" android:inputType="textMultiLine" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:gravity="right" android:layout_gravity="center" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/readstr" android:layout_weight="1.0" />
            <EditText android:gravity="left" android:id="@id/et_read_6c" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="" android:singleLine="false" android:layout_weight="2.0" android:inputType="textMultiLine" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:layout_gravity="center_horizontal" android:id="@id/button_read_6c" android:background="@drawable/color_button_selector" android:layout_width="0.0dp" android:layout_height="@dimen/button_height" android:layout_marginLeft="5.0dp" android:text="@string/butnread" android:layout_weight="1.0" />
            <Button android:layout_gravity="center_horizontal" android:id="@id/button_write_6c" android:background="@drawable/color_button_selector" android:layout_width="0.0dp" android:layout_height="@dimen/button_height" android:layout_marginLeft="5.0dp" android:text="@string/butnwrite" android:layout_weight="1.0" />
            <Button android:layout_gravity="center_horizontal" android:id="@id/button_write_epc" android:background="@drawable/color_button_selector" android:layout_width="0.0dp" android:layout_height="@dimen/button_height" android:layout_marginLeft="5.0dp" android:text="@string/butnwriteepc" android:layout_weight="1.0" />
            <Button android:layout_gravity="center_horizontal" android:id="@id/button_led" android:background="@drawable/color_button_selector" android:layout_width="0.0dp" android:layout_height="@dimen/button_height" android:layout_marginLeft="5.0dp" android:text="@string/StrLED" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:gravity="right" android:layout_gravity="center" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/tvLockMem" android:layout_weight="1.0" />
            <Spinner android:gravity="left" android:id="@id/lockmem_spinner" android:layout_width="0.0dp" android:layout_height="@dimen/rm_6c_et_height" android:layout_weight="2.0" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:gravity="right" android:layout_gravity="center" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/tvLockType" android:layout_weight="1.0" />
            <Spinner android:gravity="left" android:id="@id/locktype_spinner" android:layout_width="0.0dp" android:layout_height="@dimen/rm_6c_et_height" android:layout_weight="2.0" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <CheckBox android:id="@id/checku9" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="U9" android:layout_weight="1.0" />
            <Button android:layout_gravity="center_horizontal" android:id="@id/button_lock" android:background="@drawable/color_button_selector" android:layout_width="0.0dp" android:layout_height="@dimen/button_height" android:layout_marginLeft="5.0dp" android:text="@string/btlock" android:layout_weight="2.0" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:gravity="right" android:layout_gravity="center" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/tvKillPwd" android:layout_weight="1.0" />
            <EditText android:gravity="left" android:id="@id/et_kwd" android:layout_width="0.0dp" android:layout_height="@dimen/rm_6c_et_height" android:hint="12345678" android:layout_weight="2.0" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:layout_gravity="center_horizontal" android:id="@id/button_kill" android:background="@drawable/color_button_selector" android:layout_width="0.0dp" android:layout_height="@dimen/button_height" android:layout_marginLeft="5.0dp" android:text="@string/btKill" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" android:layout_marginTop="5.0dp">
            <TextView android:textColor="#cc0000" android:id="@id/textView" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/noteStr" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
