<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/scrollView1" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:gravity="right" android:layout_gravity="center" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/info_result" android:layout_weight="1.0" />
            <TextView android:textSize="20.0dp" android:textColor="#cc0000" android:gravity="center" android:layout_gravity="center" android:id="@id/fst_result" android:layout_width="0.0dp" android:layout_height="@dimen/rm_6c_et_height" android:layout_weight="2.0" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dp">
            <TextView android:gravity="right" android:layout_gravity="center" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/txtepc" android:layout_weight="1.0" />
            <Spinner android:gravity="left" android:id="@id/fst_spinner" android:layout_width="0.0dp" android:layout_height="@dimen/rm_6c_et_height" android:layout_weight="2.0" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" />
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" />
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" />
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dp">
            <Button android:layout_gravity="center_horizontal" android:id="@id/button_fst_select" android:background="@drawable/color_button_selector" android:layout_width="0.0dp" android:layout_height="@dimen/button_height" android:layout_marginLeft="5.0dp" android:text="@string/bt_fst_select" android:layout_weight="1.0" />
            <Button android:layout_gravity="center_horizontal" android:id="@id/button_fst_tran" android:background="@drawable/color_button_selector" android:layout_width="0.0dp" android:layout_height="@dimen/button_height" android:layout_marginLeft="5.0dp" android:text="@string/bt_fst_tran" android:layout_weight="1.0" />
            <Button android:layout_gravity="center_horizontal" android:id="@id/button_fst_show" android:background="@drawable/color_button_selector" android:layout_width="0.0dp" android:layout_height="@dimen/button_height" android:layout_marginLeft="5.0dp" android:text="@string/bt_fst_show" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
